--- a/HB-Presentation.tex
+++ b/HB-Presentation.tex
@@ -170,12 +170,12 @@
 	\frametitle{Heartbleed Bug}
 	\framesubtitle{Versões afetadas}
 	\begin{itemize}
-		\item Versões vulneráveis do OpenSSL: da 1.0.1 até 1.0.1f
+		\item Versões vulneráveis do OpenSSL: da 1.0.1 a 1.0.1f
 		\item São mais de 20 versões afetadas!
 		\item Tarball \textbf{\textcolor{filecolor}{openssl-1.0.1.tar.gz}} lançado em Março de 2012
 		\item Tarball \textbf{\textcolor{filecolor}{openssl-1.0.1f.tar.gz}} lançado em Janeiro de 2014
 		\item Tarball \textbf{\textcolor{filecolor}{openssl-1.0.1g.tar.gz}} lançado em Abril de 2014, sem o bug
-		\item Foram mais de 2 anos com o bug (e conseqüentemente de \textit{exploit})!
+		\item Foram mais de 2 anos com o bug (e conseqüentemente de \textit{exploits})!
 	\end{itemize}
 \end{frame}
 
