--- a/HB-Presentation.tex
+++ b/HB-Presentation.tex
@@ -189,5 +189,30 @@
 	\end{itemize}
 \end{frame}
 
+\begin{frame}
+	\frametitle{Conteúdo}
+	\begin{itemize}
+		\item \textcolor{covered}{A biblioteca OpenSSL}
+		\item \textcolor{covered}{Heartbleed Bug}
+		\item Remediando o problema
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Remediando o problema}
+	\begin{itemize}
+		\item Opção 1: compilar com -DOPENSSL\_NO\_HEARTBEATS
+		\item Opção 2: usar a partir da versão \textbf{1.0.1g}
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Conteúdo}
+	\begin{itemize}
+		\item \textcolor{covered}{A biblioteca OpenSSL}
+		\item \textcolor{covered}{Heartbleed Bug}
+		\item \textcolor{covered}{Remediando o problema}
+	\end{itemize}
+\end{frame}
 
 \end{document}
