Made template red

--- a/HB-Presentation.tex
+++ b/HB-Presentation.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage{color}
 
+\definecolor{beamer@blendedblue}{rgb}{0.8, 0, 0}
 \definecolor{covered}{gray}{0.65}
 \definecolor{filecolor}{rgb}{0, 0.3, 0.7}
 \usetheme{Luebeck}
