Added Heartbleed image before the introduction of the contents

--- a/HB-Presentation.tex
+++ b/HB-Presentation.tex
@@ -27,6 +27,12 @@
 \end{frame}
 
 \begin{frame}
+\begin{center}
+	\includegraphics[scale=0.5]{heartbleed.png}
+\end{center}
+\end{frame}
+
+\begin{frame}
 	\frametitle{Conteúdo}
 	\begin{itemize}
 		\item A biblioteca OpenSSL
@@ -213,6 +219,13 @@
 		\item \textcolor{covered}{A biblioteca OpenSSL}
 		\item \textcolor{covered}{Heartbleed Bug}
 		\item \textcolor{covered}{Remediando o problema}
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Referências}
+	\begin{itemize}
+		\item %TODO: Prencher as referências
 	\end{itemize}
 \end{frame}
 
