Added heartcured image

--- a/HB-Presentation.tex
+++ b/HB-Presentation.tex
@@ -28,7 +28,7 @@
 
 \begin{frame}
 \begin{center}
-	\includegraphics[scale=0.5]{heartbleed.png}
+	\includegraphics[scale=0.4]{heartbleed.png}
 \end{center}
 \end{frame}
 
@@ -220,6 +220,15 @@
 		\item \textcolor{covered}{Heartbleed Bug}
 		\item \textcolor{covered}{Remediando o problema}
 	\end{itemize}
+\end{frame}
+
+\begin{frame}
+\begin{center}
+	\includegraphics[scale=0.4]{heartcured.png}
+	\begin{center} 
+		Obrigado! :)
+	\end{center}
+\end{center}
 \end{frame}
 
 \begin{frame}
