Updated references (last slide)

--- a/HB-Presentation.tex
+++ b/HB-Presentation.tex
@@ -74,7 +74,7 @@
 	\frametitle{A biblioteca OpenSSL.}
 	\framesubtitle{Qual é a sua importância?}
 	\begin{itemize}
-		\item 2/3 de todos os servidores web utilizam OpenSSL
+		\item Cerca de 2/3 dos servidores web utilizam OpenSSL
 		\item Facebook, Twitter, Google, Yahoo, Dropbox, Instagram...
 		\item Biblioteca padrão de criptografia no Linux e BSD
 	\end{itemize}
@@ -208,7 +208,7 @@
 \begin{frame}
 	\frametitle{Remediando o problema}
 	\begin{itemize}
-		\item Opção 1: compilar com -DOPENSSL\_NO\_HEARTBEATS
+		\item Opção 1: compilar com a tag:\\ \hspace{5 mm}-DOPENSSL\_NO\_HEARTBEATS
 		\item Opção 2: usar a partir da versão \textbf{1.0.1g}
 	\end{itemize}
 \end{frame}
@@ -234,7 +234,9 @@
 \begin{frame}
 	\frametitle{Referências}
 	\begin{itemize}
-		\item %TODO: Prencher as referências
+		\item \textit{http://heartbleed.com/}
+		\item \textit{http://edition.cnn.com/2014/04/08/tech/web/heartbleed-openssl/}
+		\item \textit{http://www.codenomicon.com/news/news/2014-05-20.shtml}
 	\end{itemize}
 \end{frame}
 
